--- a/src/index.html
+++ b/src/index.html
@@ -25,12 +25,12 @@
 
     <!--inject:css-->
     <link rel="stylesheet" href="js/addPup/addPup.css">
-    <link rel="stylesheet" href="js/events/events.css">
     <link rel="stylesheet" href="js/equipment/equipment.css">
+    <link rel="stylesheet" href="js/events/events.css">
     <link rel="stylesheet" href="js/login/login.css">
     <link rel="stylesheet" href="js/overview/overview.css">
-    <link rel="stylesheet" href="js/photos/photo.css">
     <link rel="stylesheet" href="js/parks/parks.css">
+    <link rel="stylesheet" href="js/photos/photo.css">
     <link rel="stylesheet" href="js/pupInfo/pupInfo.css">
     <!--endinject-->
 </head>
@@ -87,6 +87,7 @@
     <script src="bower_components/filepicker-js/filepicker.min.js"></script>
     <script src="bower_components/angular-filepicker/dist/angular_filepicker.js"></script>
     <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
+    <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
     <!--endbower-->
     <!--inject:js-->
     <script src="js/app.module.js"></script>
@@ -105,17 +106,17 @@
     <script src="js/core/pup.factory.js"></script>
     <script src="js/core/register.factory.js"></script>
     <script src="js/core/todo.factory.js"></script>
-    <script src="js/events/events.controller.js"></script>
-    <script src="js/login/login.controller.js"></script>
     <script src="js/equipment/equipment.controller.js"></script>
+    <script src="js/events/events.controller.js"></script>
     <script src="js/extra/grooming.controller.js"></script>
     <script src="js/extra/links.controller.js"></script>
     <script src="js/extra/shelter.controller.js"></script>
+    <script src="js/login/login.controller.js"></script>
     <script src="js/medical/medical.controller.js"></script>
     <script src="js/navBar/navbar.controller.js"></script>
     <script src="js/overview/overview.controller.js"></script>
-    <script src="js/photos/photo.controller.js"></script>
     <script src="js/parks/parks.controller.js"></script>
+    <script src="js/photos/photo.controller.js"></script>
     <script src="js/pupInfo/pupInfo.controller.js"></script>
     <!--endinject-->
     <script src="style/main.js"></script>
